sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(num)  {
                  ^AlgBubbleSort1:7: error: identifier expected but '}' found.
}
^